# RustFull

./: .gitignore  README.md
agent_bridge/: Cargo.toml  bridge_heartbeat.txt
agent_bridge/agent_bridge/: logs.txt
agent_bridge/src/: main.rs  server_api.rs
agent_collector/: Cargo.toml  agent_data.py  logs.txt  monitoring_data.py
agent_collector/src/: config.rs  key_utils.rs  lib.rs  main.rs
models_database/: Cargo.toml  diesel.toml  models_database.sqlite
models_database/migrations/2025-04-10-051851_create_users/: up.sql
models_database/migrations/2025-04-15-095227_create_users/: up.sql
models_database/src/: db.rs  initail_response.rs  lib.rs  main.rs  models.rs  schema.rs
nats/: Cargo.toml  nats-server.conf
nats/jwt_keys/: private.pem  public.pem
nats/jwt_tokens/: token.jwt
nats/nats_config/certificate/: bridge-cert.pem  bridge-key.pem  bridge.csr  ca-cert.pem  ca-cert.srl  ca-key.pem  collector-cert.pem  collector-key.pem  collector.csr  san.cnf
nats/nats_config/jwt/: token.jwt
nats/nats_config/nsc/MyNewOperator/: .nsc
nats/nats_config/nsc/MyOperator/accounts/MyAccount/: MyAccount.jwt
nats/nats_config/nsc/MyOperator/accounts/MyAccount/users/: BridgeUser.jwt  CollectorUser2.jwt
nats/nsc_creds/: BridgeUser.creds  BridgeUser.jwt  BridgeUser.nk  CollectorUser.creds  CollectorUser.jwt  CollectorUser.nk  NATSOperator.jwt  nsc.json
nats/nsc_creds/jwt_store/: AAMONYIHCDG5FIXQPHJJL3H4A42OI6HKSGWVZPRRHGWICSPB2SKW52Q3.jwt
nats/src/: lib.rs  main.rs  publisher.rs  subscriber.rs
shared_config/: Cargo.toml  lib.rs
