[package]
name = "agent_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nats = { path = "../nats" }
base64 = "0.21"
models_database = { path = "../models_database" }
shared_config = { path = "../shared_config" }
url = "2.4"
anyhow = "1.0"
futures-util = "0.3"
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
once_cell = "1.18.0"
chrono = "0.4.40"
async-nats = "0.33"
 
warp = "0.3"

tower-http = { version = "0.4", features = ["cors"] }
diesel = { version = "2.2", features = ["sqlite", "chrono"] }
tracing-appender = "0.2.3"


regex = "1"




