[package]
name = "nats"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-nats = "0.32"
nkeys = "0.3"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
rustls-pemfile = "1.0"
tracing = "0.1"
shared_config = { path = "../shared_config" }
