[package]
name = "shared_config"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tracing = "0.1"
async-nats = "0.33"
nkeys = "0.3"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
rustls-pemfile = "1.0"
bytes = "1.0"
warp = "0.3"
log ="0.4.27"

[lib]
path = "lib.rs" # Specify the library entry point
